--- a/python-1.ipynb
+++ b/python-1.ipynb
@@ -9,12 +9,13 @@
    },
    "source": [
     "# Introduction to Programming – Python\n",
+    "----\n",
     "\n",
     "## Course 1 – first steps\n",
     "\n",
     "### ESSEC Business School\n",
     "\n",
-    "(gael.guibon@inria.fr)[gael.guibon@inria.fr]"
+    "[gael.guibon@inria.fr](gael.guibon@inria.fr)"
    ]
   },
   {
@@ -25,21 +26,51 @@
     }
    },
    "source": [
-    "# Introduction\n",
-    "\n",
-    "## A program\n",
-    "* A program is a set of instructions\n",
+    "# A program\n",
+    "---\n",
+    "* A program is a **set of instructions**\n",
     "    * Orders for the machine to execute later on\n",
     "* A program will be compilated for the machine to understand it\n",
-    "* A compilated program is only binary code\n",
-    "\n",
-    "## Programming languages\n",
+    "* A compilated program is only binary code\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Programming languages\n",
+    "---\n",
     "* Languages are divided by level :\n",
     "    1. High level: **Python**, Java, etc.\n",
     "    2. Low-Level: COBOL, FORTRAN, C, etc.\n",
     "    3. Assembly: some CPUs\n",
     "    4. Machine code\n",
-    "    5. Micro-code: CPUs"
+    "    5. Micro-code: CPUs\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What you need\n",
+    "----\n",
+    "* Logic:\n",
+    "    * Propositional logic\n",
+    "    * First-order logic\n",
+    "    * Predicate logic\n",
+    "* Rigor:\n",
+    "    * Verify everything, every character, every content\n",
+    "    * Order is important!\n",
+    "* Patience:\n",
+    "    * Verify/understand error logs\n",
+    "    * Proceed step by step\n",
+    "\n",
+    "# What you will learn\n",
+    "----\n",
+    "1. To **understand** and use basic types\n",
+    "2. To **implement** simple logic\n",
+    "3. To **write** simple code\n"
    ]
   },
   {
@@ -50,17 +81,74 @@
     }
    },
    "source": [
-    "# Avant de commencer (2)\n",
+    "# A basic instruction\n",
     "\n",
-    "Pour exécuter vos scripts, deux options :  \n",
+    "We can print anything by using the `print()` function.\n",
     "\n",
-    "`> python3 mon_script.py`\n",
-    "\n",
-    "ou <small>(mais pourquoi faire compliqué ?)</small>\n",
-    "\n",
-    "`> chmod u+x`  \n",
-    "`> ./mon_script.py` en ajoutant ce shebang en première ligne :  \n",
-    "`#!/usr/bin/env python3`\n"
+    "```python\n",
+    "print( SOMETHING )\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Hello world')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Principle: 1 line = 1 instruction\n",
+    "* Everything after `#` is a comment\n",
+    "```python\n",
+    "# this is a comment !!!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('hey') #first instruction\n",
+    "print('you') #second instruction (order is important)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variables\n",
+    "* Variables are data containers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'Gaël'\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Data can have different forms, same goes for variables\n",
+    "* Each variable has a **Type**\n",
+    "* Here are the most commons types in Python:\n",
+    "    * String: string of characters (text)\n",
+    "    * Integer: integer numbers\n",
+    "    * Float: numbers with floating decimal points"
    ]
   },
   {
