basic types and variables

--- a/python-1.ipynb
+++ b/python-1.ipynb
@@ -8,6 +8,8 @@
     }
    },
    "source": [
+    "<center>\n",
+    "    \n",
     "# Introduction to Programming – Python\n",
     "----\n",
     "\n",
@@ -15,7 +17,9 @@
     "\n",
     "### ESSEC Business School\n",
     "\n",
-    "[gael.guibon@inria.fr](gael.guibon@inria.fr)"
+    "[gael.guibon@inria.fr](gael.guibon@inria.fr)\n",
+    "\n",
+    "</center>"
    ]
   },
   {
@@ -36,7 +40,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# Programming languages\n",
     "---\n",
@@ -51,7 +59,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# What you need\n",
     "----\n",
@@ -64,13 +76,7 @@
     "    * Order is important!\n",
     "* Patience:\n",
     "    * Verify/understand error logs\n",
-    "    * Proceed step by step\n",
-    "\n",
-    "# What you will learn\n",
-    "----\n",
-    "1. To **understand** and use basic types\n",
-    "2. To **implement** simple logic\n",
-    "3. To **write** simple code\n"
+    "    * Proceed step by step\n"
    ]
   },
   {
@@ -78,6 +84,67 @@
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# What you will learn\n",
+    "----\n",
+    "1. To **understand** and use basic types\n",
+    "2. To **implement** simple logic\n",
+    "3. To **write** simple code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Python\n",
+    "Python is a high level programming language under free licence. It was created by Guido Van Rossum but since 2001 the development is lead by the [Python Software Foundation](http://www.python.org/psf/) (Guido was the *\"benevolent dictator for life\"* until july 2018).\n",
+    "\n",
+    "Language evolutions are detailed in Python Enhancement Proposals (PEP).\n",
+    "\n",
+    "## Python functions\n",
+    "To know what does each native Python functions, you need to access the documentation.\n",
+    "* type : `help(print)`   \n",
+    "<small>`q` to exit the doc</small>\n",
+    "* in your browser : [https://docs.python.org/3/library/functions.html](https://docs.python.org/3/library/functions.html)\n",
+    "* or : [DevDocs](http://devdocs.io/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Famous PEPs:\n",
+    "* [PEP 20](https://www.python.org/dev/peps/pep-0020/) \"Zen of Python\"<sup>1</sup> ( `import this` in python console)\n",
+    "* [PEP 8](https://www.python.org/dev/peps/pep-0008/) \"Style Guide for Python Code\"\n",
+    "\n",
+    "<sup>1</sup> \"There should be one-- and preferably only one --obvious way to do it.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show the code guidelines for Python\n",
+    "import this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -89,6 +156,16 @@
     "print( SOMETHING )\n",
     "```\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what does the print() function ?\n",
+    "help(print)"
    ]
   },
   {
@@ -123,10 +200,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Variables\n",
-    "* Variables are data containers."
+    "* Variables are data containers.\n",
+    "* `=` is used to put value into a variable\n",
+    "* Variable's content can be put into another variable\n",
+    "```python\n",
+    "variable1 = variable2\n",
+    "```"
    ]
   },
   {
@@ -140,15 +226,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "* Data can have different forms, same goes for variables\n",
-    "* Each variable has a **Type**\n",
-    "* Here are the most commons types in Python:\n",
-    "    * String: string of characters (text)\n",
-    "    * Integer: integer numbers\n",
-    "    * Float: numbers with floating decimal points"
+    "# variables values\n",
+    "lastname = 'Guibon'\n",
+    "firstname = 'Gaël'\n",
+    "print(lastname)\n",
+    "print(firstname)\n",
+    "lastname = firstname\n",
+    "print(lastname, firstname) # multiple arguments can be passed into print function. \n",
+    "# They will automatically be separated by a space."
    ]
   },
   {
@@ -159,7 +249,81 @@
     }
    },
    "source": [
-    "# Opérateurs mathématiques\n",
+    "# Variables names\n",
+    "Variables can have any names **EXCEPT the already declared keywords**.\n",
+    "To show all the python keywords do:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keyword # import libraries. this one is a standard library\n",
+    "print(keyword.kwlist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* Variable names are alphanumeric values (upper or lowercase), or/and numbers, or/and underscores. Nothing more.\n",
+    "* Variable names need to be clear and understandable. For instance:\n",
+    "```python\n",
+    "birthdayDate = '01012005' # good\n",
+    "date = '01012005' # bad\n",
+    "xyhzi = '010120005' # very bad\n",
+    "```\n",
+    "* It is recommended to follow the official Python advices [PEP 8](https://www.python.org/dev/peps/pep-0008/).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python does not accept this kind of variable name\n",
+    "my-super-username = 'Robert' # known as KebabCase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1_does_not_work = 'bad name'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use this instead\n",
+    "mySuperUsername = 'Robert' # known as CamelCase\n",
+    "# or this\n",
+    "my_super_username = 'Robert' # known as SnakeCase\n",
+    "# print them to see that it works"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Arithmetic Operators\n",
     "\n",
     "`+` addition  "
    ]
@@ -185,7 +349,7 @@
     }
    },
    "source": [
-    "`-` soustraction"
+    "`-` substraction"
    ]
   },
   {
@@ -253,11 +417,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "`%` modulo (reste de la division)"
+    "`%` modulus (division remainder)"
    ]
   },
   {
@@ -275,13 +439,29 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`//` Floor division (cut the result after the period)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3 // 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "`**` puissance"
+    "`**` exponent"
    ]
   },
   {
@@ -306,18 +486,8 @@
     }
    },
    "source": [
-    "* L'ordre des opérations est l'ordre classique en mathématiques (puissance passe avant les opérations)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "* vous pouvez utiliser des parenthèses pour définir des priorités."
+    "* Operation order and priorities are the same as in mathematics\n",
+    "* You can use parenthesis to define priorities"
    ]
   },
   {
@@ -337,13 +507,137 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* Of course, it works with variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 3\n",
+    "b = 2\n",
+    "print(a*b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "# Les chaînes de caractères\n",
+    "# Variable types\n",
+    "* Data can have different forms, same goes for variables\n",
+    "* Each variable has a **Type**\n",
+    "* Here are the most commons types in Python:\n",
+    "    * **String**: str() : string of characters (text)\n",
+    "    * **Integer**: int() : integer numbers\n",
+    "    * **Float**: float() : numbers with floating decimal points\n",
+    "    * **Boolean**: bool() : True or False\n",
+    "    * Long (*not in Python*)\n",
+    "    * Char (*not in Python*)\n",
+    "* Python is a strong dynamic typed language\n",
+    "    * dynamic = variable type is determined by the interpretor (compilor)\n",
+    "    * strong = no implicit conversion of types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* Try this :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\"Hello\" + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It does not work as we try to concatenate a String (str) with an Integer (int).\n",
     "\n",
-    "* `+` est aussi l'opérateur de concaténation de chaînes de caractères "
+    "You can find the variable's type with `type()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print( type('hello world') )\n",
+    "print( type(23) )\n",
+    "print( type(False) )\n",
+    "print( type(23.45) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Type conversion\n",
+    "* `str()`, `int()`, `float()` convert the passed argument as the desired type\n",
+    "* `bool()` returns `True` if the argument is true, `False` otherwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int(3.14159265359) # transforms a float into an integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\"Hello\" + str(1) # transforms an integer into a String and concatenate both Strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Strings Operations\n",
+    "* Concaténate Strings: `+`"
    ]
   },
   {
@@ -380,8 +674,11 @@
     }
    },
    "source": [
-    "* Les chaînes de caractères sont entourées soit de quotes simples `'`, soit de guillemets `\"`\n",
-    "* Si votre mot contient une apostrophe, entourez-le de guillemets `\"`"
+    "* Strings can be surrounded by simple quotes `'hello'` or double quotes `\"hello\"`\n",
+    "* If your work contains a simple quote use double quotes:\n",
+    "```python\n",
+    "negation = \"don't do that!\"\n",
+    "```"
    ]
   },
   {
@@ -394,7 +691,7 @@
    },
    "outputs": [],
    "source": [
-    "'Ça donne une erreur t'as vu'"
+    "'it doesn't work'"
    ]
   },
   {
@@ -407,80 +704,14 @@
    },
    "outputs": [],
    "source": [
-    "\"Ça donne une erreur t'as vu\""
+    "\"It doesn't work? Oh yes it does!\""
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "# Les variables\n",
-    "\n",
-    "* L'affectation des variables se fait à l'aide du symbole `=`  \n",
-    "* Si la variable est placée à droite du symbole `=`, sa *valeur* est affectée à la variable placée à gauche."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "var = 3 + 2\n",
-    "print(var)\n",
-    "\n",
-    "another_var = var\n",
-    "print(another_var)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "yet_another_var_2 = var + 1\n",
-    "yet_another_var_2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* Les noms de variable sont composés de car. alphabétiques (min ou maj), des chiffres et de l'underscore. C'est tout.\n",
-    "\n",
-    "* Les noms de variable sont choisis par le programmeur, ils doivent être le plus clair possible.  \n",
-    "En réalité il est conseillé de suivre la [PEP 8](https://www.python.org/dev/peps/pep-0008/).\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "je-ne-suis-pas-une-variable = 2"
+    "* you can always escape special characters with `\\` to indicate to not parse them"
    ]
   },
   {
@@ -489,50 +720,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "3_moi_non_plus = 2 + 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* Seuls les mots réservés sont interdits."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import keyword\n",
-    "print(keyword.kwlist)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Help !\n",
-    "## PEP, quesaco ?\n",
-    "\n",
-    "PEP : Python Enhancement Proposals\n",
-    "\n",
-    "Python est sous licence libre. Le langage a été créé par Guido Van Rossum mais depuis 2001 le développement de Python est géré par la [Python Software Foundation](http://www.python.org/psf/) (dont Guido était le *\"benevolent dictator for life\"* jusqu'en juillet 2018).\n",
-    "\n",
-    "Les évolutions du langage sont détaillées dans ces PEP (proposées, examinées, corrigées, acceptées puis implémentées)."
+    "'It doesn\\'t work? Oh yes it does!'"
    ]
   },
   {
@@ -548,95 +736,6 @@
     "* [PEP 8](https://www.python.org/dev/peps/pep-0008/) \"Style Guide for Python Code\"\n",
     "\n",
     "<sup>1</sup> \"There should be one-- and preferably only one --obvious way to do it.\" Tacle par derrière sur Perl, c'est pas joli-joli."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Les types\n",
-    "\n",
-    "* Python est un langage à typage *dynamique* fort : le type d'une variable est déterminé par l'interpréteur.\n",
-    "* Python est un langage à typage dynamique *fort* : pas de conversion implicite, certaines actions sont interdites."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\"Hello\" + 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* La fonction `type()` retourne le type de la variable donnée en argument."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "type(\"Hello\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "* `str()`, `int()`, `float()` convertit l'argument dans le type désiré.\n",
-    "* `bool()` retourne `True` si l'argument est vrai, `False` sinon."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "int(3.14159265359)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\"Hello\" + str(1)"
    ]
   },
   {
@@ -1021,7 +1120,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
+  "celltoolbar": "Diaporama",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
