--- a/python-1.ipynb
+++ b/python-1.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Hello world')"
+    "print('Hello worfsdfld')"
    ]
   },
   {
@@ -711,7 +711,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* you can always escape special characters with `\\` to indicate to not parse them"
+    "* You can always escape special characters with `\\` to indicate to not parse them"
    ]
   },
   {
@@ -724,18 +724,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "Les PEP les plus célèbres sont\n",
-    "* [PEP 20](https://www.python.org/dev/peps/pep-0020/) \"Zen of Python\"<sup>1</sup> (tapez `import this` dans une console)\n",
-    "* [PEP 8](https://www.python.org/dev/peps/pep-0008/) \"Style Guide for Python Code\"\n",
-    "\n",
-    "<sup>1</sup> \"There should be one-- and preferably only one --obvious way to do it.\" Tacle par derrière sur Perl, c'est pas joli-joli."
+    "''' this is a multiline String\n",
+    "I can put a huge text between 3 simple or double quotes'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" Works with tripple double quotes\"\"\""
    ]
   },
   {
@@ -746,28 +750,7 @@
     }
    },
    "source": [
-    "# Help !\n",
-    "\n",
-    "Nous venons d'utiliser 4 fonctions.\n",
-    "\n",
-    "Avant d'utiliser une fonction il est indispensable de savoir : ce que fait la fonction, quels sont les paramètres attendus, quelle est la valeur de retour.\n",
-    "\n",
-    "Pour accéder à la documentation d'une fonction :\n",
-    "* dans la console : `help(int)` <small>(d'une fonction ou d'une classe ou d'un module)</small>  \n",
-    "<small>`q` pour sortir de la doc</small>\n",
-    "* sur le web : [https://docs.python.org/3/library/functions.html](https://docs.python.org/3/library/functions.html)\n",
-    "* ou bien : [DevDocs](http://devdocs.io/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Les structures conditionnelles\n",
+    "# Conditions\n",
     "\n",
     "```python\n",
     "if condition:\n",
@@ -775,8 +758,9 @@
     "    instruction1\n",
     "    instruction2\n",
     "    #end of block\n",
+    "```\n",
     "\n",
-    "```\n"
+    "**Indentations are important** in Python"
    ]
   },
   {
@@ -787,11 +771,11 @@
     }
    },
    "source": [
-    "### Opérateurs de comparaison\n",
-    "`<`  inférieur  / `<=` inférieur ou égal  \n",
-    "`>`  supérieur  / `>=` supérieur ou égal  \n",
-    "`==` égal  / `!=` non égal  \n",
-    "`is` identité (pour les objets surtout)  / `is not` non identité  "
+    "## Comparison Operators\n",
+    "`<`  lesser than  / `<=` equal or lesser than\n",
+    "`>`  greater than  / `>=` equal or greater than  \n",
+    "`==` equal  / `!=` not equal \n",
+    "`is` identify as  / `is not` not identified as"
    ]
   },
   {
@@ -806,7 +790,7 @@
    "source": [
     "x = 4\n",
     "if x > 3:\n",
-    "    print(\"x a grandi\")"
+    "    print(\"x equals \", x, \"and is it greater than 4?\", x>3) "
    ]
   },
   {
@@ -820,9 +804,9 @@
    "outputs": [],
    "source": [
     "if x > 3:\n",
-    "    print(\"x a grandi\")\t   \n",
+    "    print(\"yes x is greater than 3\")\n",
     "else:\n",
-    "    print(\"x n'a pas grandi\")"
+    "    print(\"nope x is not greater than 3\")"
    ]
   },
   {
@@ -833,10 +817,10 @@
     }
    },
    "source": [
-    "### Opérateurs booléens\n",
-    "``not`` négation  \n",
-    "``and`` conjonction (True si les deux opérandes sont vraies, False sinon)  \n",
-    "``or``  disjonction (True si une des deux opérandes est vraie)  "
+    "## Logical Operators\n",
+    "``not`` logical NOT (reverse a condition: \"is he human?\" is the inverse of \"is he not human?\")\n",
+    "``and`` logical AND (if and only if both conditions are True, returns True. Else, returns False.)\n",
+    "``or``  disjonction (if one condition is True, returns True. Else, returns False.)  "
    ]
   },
   {
@@ -850,11 +834,11 @@
    "outputs": [],
    "source": [
     "if x > 3 and x <= 5:\n",
-    "    print(\"x a grandi, un peu\")\t   \n",
+    "    print(\"x is between 4 and 5\" )   \n",
     "elif x > 5:\n",
-    "    print(\"x a grandi\")\n",
+    "    print(\"x is lesser than 5\")\n",
     "else:\n",
-    "    print(\"x n'a pas grandi\")"
+    "    print(\"x is neither\")"
    ]
   },
   {
@@ -865,11 +849,21 @@
     }
    },
    "source": [
-    "### Opérateurs booléens\n",
-    "#### Exos\n",
-    "\n",
-    "* Écrire un script qui détermine si un nombre donné est pair ou impair\n",
-    "* Chifoumi version 1"
+    "## Membership Operators\n",
+    "`in` : verify is something is in a string or list\n",
+    "`not in` : reverse version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = 'I want to eat something!'\n",
+    "print( 'eat' in sentence )\n",
+    "print( 'eat' not in sentence )\n",
+    "print( 'hello' not in sentence )"
    ]
   },
   {
@@ -880,242 +874,24 @@
     }
    },
    "source": [
-    "# Les listes\n",
-    "#### Vite fait, on y reviendra\n",
-    "\n",
-    "* Une liste une structure de données ordonnée\n",
-    "* Une liste peut contenir plusieurs valeurs, variables, listes, objets, ... le tout de types différents\n",
-    "* On accède à un élément de la liste par son indice (de 0 à n-1, n étant le nombre d'éléments)"
+    "# Basic Role Playing Game (1)\n",
+    "* Objective: construct a textual role playing game. The game is only text with choices, conditions to verify the choices and player status.\n",
+    "* To do so you need one additional function:\n",
+    "## Input() Function\n",
+    "* Retrieve the player input"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "voyelles = []\n",
-    "voyelles = ['a', 'e', 'i', 'o', 'u']    \n",
-    "voyelles[0]    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Les dictionnaires\n",
-    "#### Vite fait, on y reviendra\n",
-    "\t\t\t\n",
-    "* Un dictionnaire est une structure de données associative de type 'clé' => 'valeur'\n",
-    "* Les données ne sont pas ordonnées comme dans les listes\n",
-    "* On accède à une valeur par sa clé\n",
-    "* Les clés sont uniques, on ne peut pas associer deux valeurs à une même clé    \n",
-    "* `keys()` renvoie la liste des clés, `values()` la liste des valeurs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "couleurs = {'a':'noir', 'e':'blanc', 'i':'rouge', 'u':'vert', 'o':'bleu'}\n",
-    "couleurs['i'] = \"pourpre\"\n",
-    "couleurs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "couleurs.keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Les boucles\n",
-    "#### Vite fait, on y reviendra\n",
-    "\n",
-    "* Les boucles `while` nécessitent que la valeur utilisée dans la condition d'arrêt soit modifiée dans le corps de la boucle.\n",
-    "* Les boucles `for` s'appliquent aux objets de type \"iterables\" (liste, chaîne de car., dict.items())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "i = 1\n",
-    "while i < 5:\n",
-    "    print(i)\n",
-    "    i = i + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for item in voyelles:\n",
-    "    print(item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for item in couleurs.keys():\n",
-    "    print(item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for key, value in couleurs.items():\n",
-    "    print(key, value)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Les fonctions\n",
-    "### Vite fait, on y reviendra\n",
-    "\n",
-    "```python\n",
-    "def ma_fonction(arg1, arg2):\n",
-    "    \"\"\" description de la fonction \"\"\"\n",
-    "    instruction1\n",
-    "    instruction2\n",
-    "    return(resultat)\n",
-    "```\n",
-    "* L'ordre des arguments est déterminant\n",
-    "* Il est possible d'outrepasser l'ordre en nommant les arguments lors de l'appel de fonction    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def soustraction(arg1, arg2):\n",
-    "    res = arg1 - arg2\n",
-    "    return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "diff = soustraction(5, 3)    \n",
-    "diff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "diff = soustraction(3, 5)    \n",
-    "diff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "diff = soustraction(arg2=5, arg1=3)    \n",
-    "diff"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Exos\n",
-    "\n",
-    "Vous rendrez des scripts Python3. Avec des commentaires c'est mieux.      \n",
-    "      \n",
-    "1. Finir le chifoumi\n",
-    "2. Faire un jeu un peu sur le modèle du chifoumi où l'utilisateur doit deviner un chiffre entre 1 et 10 (10 inclus). 5 essais possibles. Le jeu doit donner des indications (trop grand, trop petit) à chaque essai.\n",
-    "3. Résoudre [Power of Thor - Episode 1](https://www.codingame.com/training/easy/power-of-thor-episode-1) sur CodinGame"
+    "# Examples\n",
+    "# Get the input function and display a greeting message\n",
+    "print(\"Hello Player One, what's your name?\")\n",
+    "playerName = input()\n",
+    "print(\"Welcome\", playerName)\n"
    ]
   }
  ],
