--- a/python-1.ipynb
+++ b/python-1.ipynb
@@ -876,7 +876,13 @@
    "source": [
     "# Basic Role Playing Game (1)\n",
     "* Objective: construct a textual role playing game. The game is only text with choices, conditions to verify the choices and player status.\n",
-    "* To do so you need one additional function:\n",
+    "* To do so you need one additional function (see below)\n",
+    "\n",
+    "## Rules\n",
+    "* Player advance from a room to another by textually selecting one of the rooms. \n",
+    "* Player starts with 200 hp (health points)\n",
+    "* A bad decision cost the player to lose 25 hp.\n",
+    "\n",
     "## Input() Function\n",
     "* Retrieve the player input"
    ]
@@ -891,8 +897,26 @@
     "# Get the input function and display a greeting message\n",
     "print(\"Hello Player One, what's your name?\")\n",
     "playerName = input()\n",
-    "print(\"Welcome\", playerName)\n"
+    "print(\"Welcome\", playerName)\n",
+    "\n",
+    "# Example room pattern\n",
+    "print('''Your are in a tiny room. Humidity fills the air but your stomach reminds you that you are very hungry.\n",
+    "\n",
+    "You are in front of two doors. Behind the first one you can hear muffled voices. \n",
+    "\n",
+    "Behind the second one you can smell something intriguing.''')\n",
+    "print('Which door do you choose? Type \"first\" for the first room and \"second\" for the second room.')\n",
+    "selection = input()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": []
   }
  ],
  "metadata": {
