sources + installation guide added

--- a/python-1.ipynb
+++ b/python-1.ipynb
@@ -19,6 +19,10 @@
     "\n",
     "[gael.guibon@inria.fr](gael.guibon@inria.fr)\n",
     "\n",
+    "Original content inspired by [Clement Plancq's IM courses](https://github.com/clement-plancq/python-im)\n",
+    "\n",
+    "Licenced under Affero GNU3\n",
+    "\n",
     "</center>"
    ]
   },
@@ -174,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Hello worfsdfld')"
+    "print('Hello world')"
    ]
   },
   {
@@ -906,7 +910,23 @@
     "\n",
     "Behind the second one you can smell something intriguing.''')\n",
     "print('Which door do you choose? Type \"first\" for the first room and \"second\" for the second room.')\n",
-    "selection = input()\n"
+    "selection = input()\n",
+    "if selection == 'first':\n",
+    "    print('Game Over! Try again', playerName)\n",
+    "elif selection == 'second':\n",
+    "    print('Upon opening the door, you can see a huge fest with exquisite meals everywhere.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* Complete the Role Playing Game skeleton by adding choices, player HP, etc. \n",
+    "* *Tip: this kind of game is a decision tree of choices.*"
    ]
   },
   {
@@ -916,7 +936,16 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "# Install local python environnement\n",
+    "At home you may want to use Python locally. Here are the steps:\n",
+    "1. Download the latest Python (Python3 not 2) from here: [https://www.python.org/downloads/](https://www.python.org/downloads/)\n",
+    "2. Install it (if you are using Ubuntu 16.04 you already have Python installed)\n",
+    "\n",
+    "Start using it:\n",
+    "- Open terminal(unix/mac) or CommandLine(windows), type `python` to start an interactive python environnement\n",
+    "- Create a file named `my_super_program.py` and type `print('hello')` inside. Execute this file by typing `python3 my_super_program.py`."
+   ]
   }
  ],
  "metadata": {
