usable version for python-2

--- a/python-2.ipynb
+++ b/python-2.ipynb
@@ -401,7 +401,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "- \"while input is not one of the options continue asking\""
    ]
@@ -413,8 +417,41 @@
    "outputs": [],
    "source": [
     "choices = ['adopt', 'kill', 'run'] \n",
-    "while input() not in choices:\n",
-    "    print(\"not reecognized, please type one of the following options\", choices)"
+    "choice = \"\"\n",
+    "while choice not in choices:\n",
+    "    choice = input()\n",
+    "    print(\"not recognized, please type one of the following options\", choices)\n",
+    "    if(choice == 'quit'):\n",
+    "        break\n",
+    "    elif choice == 'adopt':\n",
+    "        print('You adopted the dog')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Skip or exit loops\n",
+    "- **continue**: in loops you can use `continue` to directly continue the loop (go to the next iteration).\n",
+    "- **break**: in loops you can use `break` to stop the loop and exit it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for student in ['Vincent','Alizée', 'Medhi', 'Zhuoran', 'Cynthia', 'Alexandre']:\n",
+    "    if student != 'Alexandre':\n",
+    "        print(student, 'is not Alexandre!')\n",
+    "        break # try it with 'continue' instead\n",
+    "    else:\n",
+    "        print('found him!')"
    ]
   },
   {
@@ -433,6 +470,7 @@
     "* Player advance from a room to another by textually selecting one of the rooms. \n",
     "* Player starts with 200 hp (health points)\n",
     "* A bad decision cost the player to lose 25 hp.\n",
+    "* **While** the player HP is greater than 0, continue playing\n",
     "\n",
     "## Input() Function\n",
     "* Retrieve the player input"
@@ -450,18 +488,20 @@
     "playerName = input()\n",
     "print(\"Welcome\", playerName)\n",
     "\n",
-    "# Example room pattern\n",
-    "print('''Your are in a tiny room. Humidity fills the air but your stomach reminds you that you are very hungry.\n",
-    "\n",
-    "You are in front of two doors. Behind the first one you can hear muffled voices. \n",
-    "\n",
-    "Behind the second one you can smell something intriguing.''')\n",
-    "print('Which door do you choose? Type \"first\" for the first room and \"second\" for the second room.')\n",
-    "selection = input()\n",
-    "if selection == 'first':\n",
-    "    print('Game Over! Try again', playerName)\n",
-    "elif selection == 'second':\n",
-    "    print('Upon opening the door, you can see a huge fest with exquisite meals everywhere.')\n"
+    "choice = \"\"\n",
+    "choices = [\"first\", \"second\"]\n",
+    "while choice not in choices:\n",
+    "    print('''Your are in a tiny room. Humidity fills the air but your stomach reminds you that you are very hungry.\n",
+    "    You are in front of two doors. Behind the first one you can hear muffled voices. \n",
+    "    Behind the second one you can smell something intriguing.''')\n",
+    "    print('Which door do you choose? Type', choices[0], 'for the first room and', choices[1], 'for the second room.')\n",
+    "    choice = input()\n",
+    "    if choice == 'first':\n",
+    "        print('Game Over! Try again', playerName)\n",
+    "    elif choice == 'second':\n",
+    "        print('Upon opening the door, you can see a huge fest with exquisite meals everywhere.')\n",
+    "    else:\n",
+    "        print('WRONG : Possible choices', choices)\n"
    ]
   },
   {
@@ -473,7 +513,10 @@
    },
    "source": [
     "* Complete the Role Playing Game skeleton by adding choices, player HP, etc. \n",
-    "* *Tip: this kind of game is a decision tree of choices.*"
+    "* *Tip: this kind of game is a decision tree of choices.*\n",
+    "* Use while to keep the playing going on until certain conditions\n",
+    "* Use while to check the player hp\n",
+    "* Use for to display player' items or actions"
    ]
   },
   {
